--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#09198A" />
+  <meta name="robots" content="index, follow" />
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <!--
