--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#09198A" />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="evXPPY9avjhlYaahaFNdnRNc2Yi0ftv64mAd3AEpmC8" />
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <!--
