Added canonical tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#09198A" />
   <meta name="robots" content="index, follow" />
   <meta name="google-site-verification" content="evXPPY9avjhlYaahaFNdnRNc2Yi0ftv64mAd3AEpmC8" />
+  <link rel="canonical" href="https://areyou.netlify.com/" />
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <!--
