--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     navigator.serviceWorker.register('service-worker.js')
       .then(function (reg) {
       }).catch(function (err) {
-        console.log("No it didn't. This happened:", err)
+        // console.log("No it didn't. This happened:", err)
       });
   }
 </script>
